# projects

./: README.md
KeyLogger(QT)/: KeyLogger.pro  main.cpp
KoboldConExt/: .vscodeignore  GEMINI.md  README.md  koboldcpp-0.0.1.vsix  koboldcpp-0.0.2.vsix  package-lock.json  package.json  webpack.config.js
Majeh's pdf viewer touchsupport/: Makefile  Makerules  README.md  build.ps1  build.sh
MyBook/: bookviewer.cpp  bookviewer.h  bookviewer.ui  main.cpp  startmain.h
MyBook (QT)/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  Makefile1  MyBook.pro  bookviewer.cpp  bookviewer.h  bookviewer.ui  main.cpp  startmain.cpp  startmain.h  startmain.ui  ui_bookviewer.h  ui_startmain.h  utils.cpp  utils.h
MyBook-build-desktop/: Makefile  Makefile.Debug  ui_bookviewer.h
NetCat(QT)/: NetCatQT.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
Tripple_X(CPP)/: main.cpp  methods.h
WTLO/: index.html
WinClipVoice (Clipboard TTS reader)/: README.md  TTS.ps1
koboldToClaude proxy bridge/: .env  README.md  proxy_server.py  setup.bat  start_server.bat  stop_server.bat  v1.txt
lodgeManagement/: GEMINI.md  clean_ram.sh  run.sh  (+2 more)
lodgeManagement/lodge-management-web/: .firebaserc  Cargo.toml  index.html  sw.js
lodgeManagement/lodge-management-web/src/: api.rs  main.rs  models.rs  utils.rs
lodgeManagement/lodge-management-web/src/components/: bookings.rs  customers.rs  dashboard.rs  login.rs  manage_users.rs  mod.rs  rooms.rs
lodgeManagement/lodge-management-web/src/components/dashboard/: booking_details.rs  home.rs  layout.rs  mod.rs  printable_bill.rs
(+245 files in other folders)
