[package]
name = "lodge-management-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = { version = "0.3", features = ["Reflect", "Object"] }
web-sys = { version = "0.3", features = ["Storage", "Window", "File", "FileList", "HtmlInputElement"] }
gloo-timers = { version = "0.3", features = ["futures"] }
# We will add firebase interop later
